Preventing funky overflowing when too many columns are used

--- a/src/client/volunteer/styles/classify-page.scss
+++ b/src/client/volunteer/styles/classify-page.scss
@@ -104,6 +104,7 @@ h1 {
         flex-basis: 0;
       }
       .classify-panel {
+        max-width: 60vw;
         flex-grow: 1;
         flex-basis: 0;
       }
